test/error/iocheck/err6.rzy
// Error: response is not allowed to write state

component
  Err6
    response what():R{0,100};
    
  implementation elementary
    
    var
      a : R{0,100} = 0;
    
    function bar()
      a := 42;
    end
    
    function foo()
      bar();
    end
    
    response what():R{0,100}
      foo();
      return a;
    end

  end

